deploy/resources/generation/resources/generation/resources/generation/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-job-flow-scheduling/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-jobFlowScheduling
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-job-flow-scheduling
    sas.com/admin: namespace
  name: sas-job-flow-scheduling
spec:
  host: $(INGRESS_HOST)
  path: /jobFlowScheduling
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-job-flow-scheduling
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-jobFlowScheduling
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-job-flow-scheduling
    sas.com/admin: namespace
  name: sas-job-flow-scheduling-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /jobFlowScheduling
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-job-flow-scheduling
  wildcardPolicy: Subdomain
